@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: bearoff.c,v 1.65 2008/06/10 21:00:48 Superfly_Jon Exp $
+ * $Id: bearoff.c,v 1.66 2008/06/11 22:21:54 c_anthon Exp $
  */
 
 #include "config.h"
@@ -53,7 +53,6 @@
 
 const char *aszBearoffGenerator[N_BEAROFFS] = {
   N_("GNU Backgammon"),
-  N_("ExactBearoff"),
   N_("Unknown program")
 };
 
@@ -341,113 +340,6 @@ static void ReadTwoSidedBearoff ( const bearoffcontext *pbc,
 	++((bearoffcontext *)pbc)->nReads;	/* nReads only used for stats info */
 }
 
-static unsigned int countBoard ( const unsigned int nDistance, const unsigned int nChequers )
-{
-  unsigned int i, id = 0;
-
-  if ( nDistance == 1 || ! nChequers )
-    return 1;
-  else
-  {
-    for ( i = 0; i <= nChequers; ++i )
-      id += countBoard ( nDistance - 1, nChequers - i );
-    return id;
-  }
-}
-
-static unsigned int boardNr ( const unsigned int anBoard[], const unsigned int nDistance, const unsigned int nPoints, const unsigned int nChequers )
-{
-  unsigned int i, id;
-
-  if ( nDistance == 1 || ! nChequers )
-    return 0;
-
-  id = boardNr ( anBoard, nDistance - 1, nPoints, nChequers - anBoard [ nDistance - 2 ] );
-  for ( i = 0; i < anBoard [ nDistance - 2 ]; ++i )
-    id += countBoard ( nDistance - 1, nChequers - i );
-
-  return id;
-
-}
-
-/*
- * BEAROFF_EXACT_BEAROFF: read equities from databases generated by
- * ExactBearoff <URL:http://www.xs4all.nl/~mdgsoft/bearoff/>
- *
- * 12 bytes is stored for each position
- *
- */
-
-static int
-ReadExactBearoff ( const bearoffcontext *pbc, 
-                   const unsigned int iPos,
-                   float ar[ 4 ], unsigned short int aus[ 4 ] ) {
-
-  unsigned char ac[ 12 ];
-  unsigned int offset;
-  unsigned long ul;
-  const float storefactor = 4194000.0f;
-  int i;
-  unsigned int nUs, nThem;
-  unsigned int n = Combination ( pbc->nChequers + pbc->nPoints, pbc->nPoints );
-  TanBoard anBoard;
-
-  /* convert gnu backgammon position to ExactBearoff position */
-
-  nUs = iPos / n;
-  nThem = iPos % n;
-
-
-#if 0
-  for ( i = 0; i < 925; ++i ) {
-    PositionFromBearoff ( anBoard[ 0 ], i, pbc->nPoints, pbc->nChequers );
-    nUs = boardNr ( anBoard[ 0 ], pbc->nPoints, pbc->nPoints,
-                    pbc->nChequers );
-    if ( nUs == 3 ) {
-      printf ( "position match; %d (%d %d %d %d %d %d)\n", i,
-               anBoard[ 0 ][ 0 ],
-               anBoard[ 0 ][ 1 ],
-               anBoard[ 0 ][ 2 ],
-               anBoard[ 0 ][ 3 ],
-               anBoard[ 0 ][ 4 ],
-               anBoard[ 0 ][ 5 ] );
-      exit(-1);
-    }
-  }
-#endif
-
-  PositionFromBearoff ( anBoard[ 0 ], nThem, pbc->nPoints, pbc->nChequers );
-  PositionFromBearoff ( anBoard[ 1 ], nUs, pbc->nPoints, pbc->nChequers  );
-
-  /* printf ( "gnu position %u %u\n", nUs, nThem ); */
-
-  nThem = boardNr ( anBoard[ 0 ], pbc->nPoints, pbc->nPoints, pbc->nChequers );
-  nUs =   boardNr ( anBoard[ 1 ], pbc->nPoints, pbc->nPoints, pbc->nChequers );
-
-  /* printf ( "eb position  %u %u\n", nUs, nThem ); */
-
-  offset = nUs * n + nThem + 16;
-
-  /* read from database */
-
-  ReadBearoffFile(pbc, offset, ac, 12);
-
-  for ( i = 0; i < 4; ++i ) {
-    ul = ac[ 3 * i ] | ac[ 3 * i + 1 ] << 8 | ac[ 3 * i + 2 ] << 16;
-
-    if ( ar )
-      ar[ i ] = ul / storefactor - 2.0f;
-    if ( aus )
-      aus[ i ] = (unsigned short)(ul >> 8);
-
-  }
-  
-  ++((bearoffcontext *)pbc)->nReads;	/* nReads only used for stats info */
-
-  return 0;
-
-}
-
 extern int
 BearoffCubeful ( const bearoffcontext *pbc,
                  const unsigned int iPos,
@@ -464,13 +356,9 @@ BearoffCubeful ( const bearoffcontext *pbc,
 	  return 0;
     }
 
-  case BEAROFF_EXACT_BEAROFF:
-
-    return ReadExactBearoff ( pbc, iPos, ar, aus );
-
   case BEAROFF_UNKNOWN:
   default:
-	/* Never reached */
+    g_assert_not_reached();
     return -1;
   }
 }
@@ -663,15 +551,9 @@ extern int BearoffEval ( const bearoffcontext *pbc, const TanBoard anBoard, floa
 
     break;
 
-  case BEAROFF_EXACT_BEAROFF:
-
-    g_assert ( pbc->bt == BEAROFF_TWOSIDED );
-    return BearoffEvalTwoSided ( pbc, anBoard, arOutput );
-
   case BEAROFF_UNKNOWN:
   default:
-
-    g_assert ( FALSE );
+    g_assert_not_reached();
   }
 
   return 0;
@@ -977,12 +859,9 @@ extern int BearoffDump ( const bearoffcontext *pbc, const TanBoard anBoard, char
     }
     break;
 
-  case BEAROFF_EXACT_BEAROFF:
-
-    return BearoffDumpTwoSided ( pbc, anBoard, sz );
-
   case BEAROFF_UNKNOWN:
   default:
+    g_assert_not_reached();
 	  g_assert(FALSE);
   }
   /* code not reachable */
@@ -1205,8 +1084,6 @@ extern bearoffcontext *BearoffInit(const char *szFilename, const int bo, void (*
   if ( ! strncmp ( sz, "gnubg", 5 ) )
     pbc->bc = BEAROFF_GNUBG;
   else if ( isExactBearoff ( (unsigned char*)sz ) )
-    pbc->bc = BEAROFF_EXACT_BEAROFF;
-  else
     pbc->bc = BEAROFF_UNKNOWN;
 
   pbc->szFilename = szFilename ? g_strdup( szFilename ) : NULL;
@@ -1298,48 +1175,6 @@ extern bearoffcontext *BearoffInit(const char *szFilename, const int bo, void (*
 
     iOffset = 0;
 
-    break;
-
-  case BEAROFF_EXACT_BEAROFF: 
-    {
-      unsigned int l, m;
-      
-      l = MakeInt((unsigned char)sz[8], (unsigned char)sz[9], (unsigned char)sz[10], (unsigned char)sz[11]);
-      m = MakeInt((unsigned char)sz[12], (unsigned char)sz[13], (unsigned char)sz[14], (unsigned char)sz[15]);
-      printf ( "nBottom %d\n", l );
-      printf ( "nTop %d\n", m );
-
-      if ( m != l ) {
-        fprintf ( stderr, _("GNU Backgammon can only read ExactBearoff "
-                            "databases with an\n"
-                            "equal number of chequers on both sides\n"
-                            "(read: botton %d, top %d)\n"),
-                  l, m );
-      }
-
-      if ( ( pbc = BearoffAlloc() ) == NULL ) {
-        /* malloc failed */
-        perror ( "bearoffcontext" );
-        return NULL;
-      }
-
-      pbc->bc = BEAROFF_EXACT_BEAROFF;
-      pbc->fInMemory = TRUE;
-      pbc->nPoints = 6;
-      pbc->nChequers = l;
-      pbc->bt = BEAROFF_TWOSIDED;
-      pbc->fCompressed = FALSE;
-      pbc->fGammon = FALSE;
-      pbc->fND = FALSE;
-      pbc->fCubeful = TRUE;
-      pbc->fHeuristic = FALSE;
-      pbc->fMalloc = FALSE;
-      pbc->p = NULL;
-      pbc->szFilename = szFilename ? g_strdup( szFilename ) : NULL;
-
-      iOffset = 0;
-    
-    }
     break;
 
   case BEAROFF_UNKNOWN: 
@@ -1654,9 +1489,9 @@ extern int BearoffDist ( const bearoffcontext *pbc, const unsigned int nPosID,
       return ReadBearoffOneSidedExact ( pbc, nPosID, arProb, arGammonProb, ar,
                                         ausProb, ausGammonProb );
 
-  case BEAROFF_EXACT_BEAROFF:
   case BEAROFF_UNKNOWN:
   default:
+    g_assert_not_reached();
 	/* code not reachable */
 	return -1;
   }
